--- a/css/white-red.css
+++ b/css/white-red.css
@@ -51,7 +51,7 @@ body{
   background-color:#1b1b1b
 }
 ::-webkit-scrollbar{
-  width:20px
+  width:12px
 }
 ::-webkit-scrollbar-track{
   box-shadow:inset 0 0 5px #1b1b1b;
@@ -59,7 +59,7 @@ body{
 }
 ::-webkit-scrollbar-thumb{
   background:#7e0001;
-  border-radius:5px
+  border-radius:3px
 }
 ::-webkit-scrollbar-thumb:hover{
   background:#b30000
@@ -4519,5 +4519,9 @@ input:-webkit-autofill,input:-webkit-autofill:active,input:-webkit-autofill:focu
   .hidden-mobile{
     display:none
   }
-
+}
+@media (min-width:767px){
+  .hidden-computer{
+    display:none
+  }
 }
